--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,5 +66,17 @@ dependencies {
     kapt "androidx.room:room-compiler:$room_version"
     androidTestImplementation "androidx.room:room-testing:$room_version"
 
+    def kotlin_coroutines_version = "1.6.1"
+    def lifecycle_version = "2.4.1"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$kotlin_coroutines_version"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$kotlin_coroutines_version"
+    implementation "androidx.room:room-ktx:$room_version"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
 
+    def retrofit_version = "2.9.0"
+    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
+
+    def logging_interceptor_version = "5.0.0-alpha.6"
+    implementation "com.squareup.okhttp3:logging-interceptor:$logging_interceptor_version"
 }
