--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,4 +79,7 @@ dependencies {
 
     def logging_interceptor_version = "5.0.0-alpha.6"
     implementation "com.squareup.okhttp3:logging-interceptor:$logging_interceptor_version"
+
+    def koin_version = "3.2.0"
+    implementation "io.insert-koin:koin-android:$koin_version"
 }
