--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,4 +82,13 @@ dependencies {
 
     def koin_version = "3.2.0"
     implementation "io.insert-koin:koin-android:$koin_version"
+
+    def dagger_version = "2.42"
+    implementation "com.google.dagger:dagger:$dagger_version"
+    kapt "com.google.dagger:dagger-compiler:$dagger_version"
+
+    def activity_ktx_version = "1.1.0"
+    def fragment_ktx_version = "1.2.5"
+    implementation "androidx.activity:activity-ktx:$activity_ktx_version"
+    implementation "androidx.fragment:fragment-ktx:$fragment_ktx_version"
 }
