--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,8 @@ plugins {
     id 'dagger.hilt.android.plugin'
 }
 
+apply from: '../shared_dependencies.gradle'
+
 android {
     compileSdk 32
 
@@ -41,6 +43,7 @@ android {
 
 dependencies {
 
+    implementation project(":core")
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.6.0'
