--- a/core/build.gradle
+++ b/core/build.gradle
@@ -56,9 +56,16 @@ dependencies {
     implementation "com.squareup.okhttp3:logging-interceptor:$logging_interceptor_version"
 
     def kotlin_coroutines_version = "1.6.1"
-    def lifecycle_version = "2.4.1"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$kotlin_coroutines_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$kotlin_coroutines_version"
     implementation "androidx.room:room-ktx:$room_version"
+
+    def lifecycle_version = "2.4.1"
     api "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
+
+    def activity_ktx_version = "1.1.0"
+    api "androidx.activity:activity-ktx:$activity_ktx_version"
+    
+    def fragment_ktx_version = "1.2.5"
+    api "androidx.fragment:fragment-ktx:$fragment_ktx_version"
 }
